@startuml class

    abstract class GameLoopManager <<MonoBehaviour>>{
        - [SerializeField] loadingUIObject
        - [Inject] I_ObjectUpdatable objectUpdater
        - SceneLooder sceneLoder
        - E_GameLoopState currentState
        - E_SceneName NextScene

        - [Inject] void InjectInit(I_SceneLoadNoticable)
        - void Start()
        - void Update()
        - void activeIsHaveToLoading( E_SceneName )

    }

    enum E_GameLoopState{
        Init
        Update
        Loading
    }

    enum E_SceneName{
        TitleScene
        ...
    }

    enum E_SceneGameState{
        State1
        State2
    }

    abstract class GameManager< T > <<Where T : Enum>>{

        # T currentState

        # Subject<T> UpdateStateSubject
        # Subject<bool> PauseSubject
        # Subject<E_SceneName> SceneLoadSubject

        + IObservable<T> UpdateStateAsync { get }
        + IObservable<bool> PauseAsync { get }
        + IObservable<E_SceneName> SceneLoadAsync { get } 

        + void InitObject()
        + void StartGame()
        + void ReleaseObject()
    }

    interface I_GameStateUpdatable< T > <<Where T : Enum>>{
        + IObservable<T> UpdateStateAsync {get}
        + IObservable<bool> PauseAsync {get}
    }

    interface I_Pausable{
        + IObservable<bool> PauseAsync {get}
    }

    interface I_SceneLoadNoticable{
        + IObservable<E_SceneName> LoadSceneAsync {get}
    }

    interface I_ObjectUpdatable{
        + void InitObject()
        + void UpdateObject()
        + void StartGame()
        + void ReleaseObject()
    }

    class ObjectUpdater {
        -[Inject] GameManager<E_SceneGameState>
        + void InitObject()
        + void UpdateObject()
        + void StartGame()
        + void ReleaseObject()
    }

    class Manager
    class GameObject <<MonoBehaviour>> {
        - [InJect] InitObject(I_GameStateUpdatable<E_SceneGameState>)
    }


    class SceneLooder{
        - AsyncOperation asyncLoad
        - LoadingUIManager uiManager
        - float currentTime
        - readonly float loadingDilay = 1.0f

        + SceneLooder(LoadingUIManager)
        + IEnumerator LoadScene(E_SceneName sceneName)
    }

    class CoroutineHander<< Singleton MonoBehaviour >>{
        - static Dictionary<IEnumerator,Coroutine> ActiveCoroutinDic
        - static Subject<IEnumerator> FinishCoroutinSubject

        # override void OnInitialize()
        - [Inject] void UpdateSceneInjection()

        + static Coroutine OrderStartCoroutine(IEnumerator coroutine)
        + static void OrderStopCoroutine(IEnumerator target)
        + static void ReStartCoroutine(IEnumerator target)

        - static void StopAllActiveCoroutine()
        - static void ReStartAllActiveCoroutine()
        - static IEnumerator CheckFinishCoroutine(IEnumerator coroutine)
    }


    GameLoopManager *--> I_ObjectUpdatable : Update
    GameLoopManager -left-> I_SceneLoadNoticable : Observe
    GameLoopManager *-right-> SceneLooder : Inject and Load

    GameManager -up-|> I_SceneLoadNoticable
    GameManager --|> I_GameStateUpdatable 

    ObjectUpdater -right-|> I_ObjectUpdatable
    ObjectUpdater *-left-> GameManager : Init
    ObjectUpdater --> Manager :Init and Inject 

    I_Pausable <|-up- I_GameStateUpdatable
    CoroutineHander -left-> I_Pausable : Observe

    Manager -left-> I_GameStateUpdatable : Observe
    Manager --> CoroutineHander : OrderStartCoroutine
    GameObject -right-> I_GameStateUpdatable : Observe

    E_GameLoopState --+ GameLoopManager


@enduml